Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <li>2 slices of bread</li>
     <li>4 slices of cheese</li>
     <li>1 tbsp of butter</li>
-    <li>Cover with second slice of bread,</li>
+    <li>Cover with second slice of bread,<ul>
+      <li>1
+      <li>2
+    </ul></li>
     <li>Turn over and fry for 2 minutes</li>
   </ul>
 
