--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <!-- Write your HTML in this file -->
   <ul>
     <li>2 slices of bread</li>
-    <li>4 slices of cheese</li>
-    <li>1 tbsp of butter</li>
-    <li>Cover with second slice of bread,<ul>
+    <li>4 slices of cheese<ul>
       <li>1
       <li>2
+      <li>Parmesan
     </ul></li>
+    <li>1 tbsp of butter</li>
+    <li>Cover with second slice of bread,</li>
     <li>Turn over and fry for 2 minutes</li>
   </ul>
 
