Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     <li>Turn over and fry for 2 minutes</li>
   </ul>
 
+  <ol>
+    <li>Grilled Cheese
+    <li>Sushi
+    <li>Cheese and crackers
+    <li>Cheese soup
+    <li>Nacho Cheese French Fries
+  </ol>
+
 </body>
 </html>
